--- a/tomcat-custom/src/main/webapp/WEB-INF/web.xml
+++ b/tomcat-custom/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+<!--    Servelt 全类名-->
+    <servlet>
+        <servlet-name>servletxml</servlet-name>
+        <servlet-class>com.wovert.web.ServerletXml</servlet-class>
+    </servlet>
+    
+<!--    Serverlet访问路径-->
+    <servlet-mapping>
+        <servlet-name>servletxml</servlet-name>
+        <url-pattern>/xmlfile</url-pattern>
+    </servlet-mapping>
 </web-app>
